# pilot

./: Cargo.toml
.github/workflows/: pilot-build-piepline.yml  pilot-pipeline.yml  pilot-remove-pipeline.yml  pilot-upload-pipeline.yml
config/: orderbook.yml  symbols
crates/pilot-arbitrage/: Cargo.toml
crates/pilot-arbitrage/src/: arbitrage.rs  lib.rs
crates/pilot-cli/: Cargo.toml
crates/pilot-cli/src/: main.rs
crates/pilot-pipeline/: Cargo.toml
crates/pilot-pipeline/src/: fetch_orderbook.rs  fetch_price.rs  helper.rs  lib.rs  load_orderbook.rs  orderbook.rs  remove_orderbook.rs
crates/pilot-proto/: Cargo.toml  build.rs
crates/pilot-proto/src/: lib.rs  types.proto
crates/pilot-upload/: Cargo.toml
crates/pilot-upload/src/: lib.rs
