[package]
name = "pilot-pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
pilot-proto = { path = "../pilot-proto"}
binance = "*"
anyhow = "*"
chrono = "*"
log = "*"
env_logger = "*"
threadpool = "*"
http = "*"
snap = "*"
hyper = "*"
reqwest = "*"
prost = "*"
tokio = "1"
maplit = "*"
serde_json = "*"
serde = "*"
itertools = "*"
float-cmp = "*"
yaml-rust = "*"
serde_yaml = "*"
parquet = "*"
octocrab = "0.16"
octorust = {git = "https://github.com/detailyang/third-party-api-clients.git"}